--- a/source/pages/_page.scss
+++ b/source/pages/_page.scss
@@ -1,4 +1,3 @@
 .page {
   display: flex;
-  overflow: auto;
 }
