--- a/source/pages/sheet.scss
+++ b/source/pages/sheet.scss
@@ -35,7 +35,7 @@
     overflow-y: auto;
     padding: 5px;
 
-    > .sheetforge.sheet {
+    .sheetforge.sheet {
       margin: 0;
 
       button {
